--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,11 @@ allprojects {
     apply plugin: "io.spring.dependency-management"
     dependencyManagement {
         dependencies {
-            /*dependency "com.google.guava:guava:${Versions.guava}"*/
-            dependency "com.google.guava:guava:31.0.1-jre"
+            imports {
+                mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.2")
+            }
+            dependency "com.google.guava:guava:${Versions.guava}"
+            // dependency "com.google.guava:guava:31.0.1-jre"
         }
     }
 }
