--- a/hw06_annotation/build.gradle
+++ b/hw06_annotation/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation ('org.assertj:assertj-core')
     testImplementation ('org.mockito:mockito-core')
     testImplementation ('org.mockito:mockito-junit-jupiter')
+    //testImplementation('org.springframework:springframework-core-annotation')
 }
 
 test {
