home_work to lesson 8. Optimization

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,4 @@ rootProject.name = '2021-12-otus-java-Petrova'
 include 'hw01_gradle'
 include 'hw04_generics'
 include 'hw06_annotation'
-include 'hw08_gc'
+include 'hw08_gc:homework'
