home_work to lesson 10.Init.

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'hw01_gradle'
 include 'hw04_generics'
 include 'hw06_annotation'
 include 'hw08_gc:homework'
+include 'hw10_bCodes'
 include 'hw12_solid'
